Fixing issues with short description info modal not showing

--- a/plugins/woo-ai/src/components/info-modal/info-modal.scss
+++ b/plugins/woo-ai/src/components/info-modal/info-modal.scss
@@ -2,6 +2,7 @@
     max-width: 400px;
     padding:20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+	overflow: hidden;
 
     span {
         font-weight: 600;
